<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">云拓测试</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置。</string>
    <!-- 登录提示 -->
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_passward">请输入密码</string>
    <string name="login">登 录</string>
    <string name="regist">注册</string>
    <string name="remember_pwd_str">记住密码</string>
    <string name="auto_login_str">自动登录</string>
    <string name="message_invalid_username_password">用户名或密码错误</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>
    <string name="logout">注销</string>
    <!-- 主界面tab top -->
    <string name="tab_home">首页</string>
    <string name="tab_chat">沟通</string>
    <string name="tab_colleague">同事圈</string>
    <string name="tab_setting">我的</string>
    <string name="tab_contact">通讯录</string>
    <string name="top_contact">通讯录</string>
    <string name="tab_office">移动办公</string>
    <string name="contact_str">联系人</string>
    <!-- main page -->
    <string name="tab_check">流程审批</string>
    <string name="tab_report">我的考勤</string>
    <string name="tab_meetting">我的会议</string>
    <string name="tab_schedule">流程权责</string>
    <string name="tab_esp">生态系统平台</string>
    <string name="tab_timesheet">Timesheet 平台</string>
    <string name="tab_suggestion">我要建议</string>
    <string name="search">搜索</string>
    <string name="popwindow_pending">标为待办</string>
    <string name="popwindow_top">置顶聊天</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <!-- im_activity_chat_base -->
    <string name="chat_send">发送</string>
    <string name="chat_voice">按住 说话</string>
    <string name="voice_cancle_send_move">手指上滑，取消发送</string>
    <string name="voice_cancle_send_up">松开手指，取消发送</string>
    <string name="voice_too_short">说话时间太短</string>
    <string name="chat_for_clean">清空聊天记录</string>
    <string name="chat_for_search">查找聊天内容</string>
    <string name="group_chat_del_exit">删除并退出</string>
    <string name="chat_menu_pic">照片</string>
    <string name="chat_menu_camera">拍照</string>
    <string name="chat_menu_mail">邮件</string>
    <string name="chat_menu_location">定位</string>
    <string name="chat_menu_vedio">视频聊天</string>
    <!-- list -->
    <string name="list_back_more">更多</string>
    <string name="list_back_del">删除</string>
    <string name="contact_orgunition">组织架构</string>
    <string name="contact_group">我的群组</string>
    <string name="contact_public">公众号</string>
    <string name="contact_attention">我的关注</string>
    <!-- user -->
    <string name="user_empid">员工号</string>
    <string name="user_city">城市</string>
    <string name="user_objname">部门</string>
    <string name="user_post">岗位</string>
    <string name="user_jobtitle">职级</string>
    <string name="user_jobtitle_2">工号</string>
    <string name="user_phone">手机</string>
    <string name="user_office_phone">座机</string>
    <string name="device_id">设备ID</string>
    <string name="user_mail">邮箱</string>
    <string name="user_send_msg_btn">发消息</string>
    <string name="user_setting_info">个人信息设置</string>
    <string name="user_setting_info_password">修改密码</string>
    <string name="user_setting_info_old_password">原密码</string>
    <string name="user_setting_info_new_password">新密码</string>
    <string name="user_setting_info_confirm_password">确认密码</string>
    <string name="user_setting_info_detail">(密码修改，手机绑定)</string>
    <string name="user_setting_yinsi">隐私设置</string>
    <string name="user_setting_yanzheng">验证开关配置入口</string>
    <string name="user_setting_other">其他设置</string>
    <string name="user_setting_clearcache">清除缓存</string>
    <string name="user_setting_update">检查更新</string>
    <string name="user_setting_update_orgunition">更新组织架构</string>
    <string name="take_txt">文字</string>
    <string name="photo_camera">拍照</string>
    <string name="photo_picker">从手机相册选择</string>
    <string name="group_create_cn">中文</string>
    <string name="group_create_en">英文</string>
    <string name="group_create_attention">我的关注</string>
    <string name="user_zone_count">发表说说</string>
    <string name="user_attention_count">我关注的</string>
    <string name="user_be_attention_count">关注我的</string>
    <!-- 默认的viewpageIndicator -->
    <bool name="default_circle_indicator_centered">true</bool>
    <color name="default_circle_indicator_fill_color">#ff298ecb</color>
    <color name="default_circle_indicator_page_color">#ff777777</color>
    <integer name="default_circle_indicator_orientation">0</integer>
    <dimen name="default_circle_indicator_radius">3dp</dimen>
    <bool name="default_circle_indicator_snap">false</bool>
    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>
    <dimen name="default_circle_indicator_stroke_width">1dp</dimen>
    <!-- 上拉下拉 -->
    <!-- <string name="xlistview_header_hint_normal">下拉刷新</string> -->
    <string name="xlistview_header_hint_normal">下拉加载</string>
    <string name="xlistview_header_hint_ready">松开查看</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>
    <!-- 修改组名 -->
    <string name="no_name">未命名</string>
    <string name="room_name">群名称</string>
    <string name="scan_text">对准二维码到框内即可自动扫描</string>
    <!-- Gesture code starting -->
    <string name="user_setting_gesture">手势</string>
    <string name="user_setting_gesture_password">手势密码</string>
    <string name="user_setting_gesture_modify_password">修改手势密码</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">请绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">请再次绘制解锁图案</string>
    <string name="setup_gesture_pattern_4_limit">至少连接4个点, 请重新输入</string>
    <string name="setup_gesture_pattern_again_error">与上一次绘制不一致，请重新绘制</string>
    <string name="modify_gesture_code">修改手势密码</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="gesture_error_count">密码错误，还可以输入%1$d次</string>
    <string name="setup_input_old_gesture_code">请输入原手势密码</string>

    <string name="suggestion_type">建议类型：</string>
    <!-- End -->

    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>

    <string name="waiting">请稍后&#8230;</string>
    <string name="tab_kk">KK</string>

</resources>