<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@drawable/gesture_bg" >    <LinearLayout        android:id="@+id/gesture_tip_layout"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:orientation="vertical" >        <include layout="@layout/comm_topbar_style_2" />        <TextView            android:id="@+id/gesture_tip_logo"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_marginTop="@dimen/dp_10"            android:gravity="center_horizontal"            android:text="移动协同办公"            android:textColor="@color/white"            android:textSize="@dimen/sp_30"            android:textStyle="bold" />        <TextView            android:id="@+id/gesture_tip_small_logo"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_marginTop="@dimen/dp_10"            android:gravity="center_horizontal"            android:text="改变你的工作方式"            android:textColor="@color/white_70"            android:textSize="@dimen/sp_20" />        <TextView            android:id="@+id/text_tip"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_marginTop="@dimen/dp_10"            android:gravity="center_horizontal"            android:text="@string/setup_gesture_pattern"            android:textColor="@color/white_70"            android:textSize="@dimen/sp_15"            android:visibility="visible" />    </LinearLayout>    <FrameLayout        android:id="@+id/gesture_container"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@id/gesture_tip_layout"        android:layout_centerHorizontal="true"        android:layout_marginTop="@dimen/dp_20" >    </FrameLayout>    <LinearLayout        android:id="@+id/text_gesture_option_layout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_marginBottom="@dimen/dp_50"        android:gravity="center"        android:orientation="horizontal" >        <TextView            android:id="@+id/text_modify_gesture"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/modify_gesture_code"            android:textColor="@color/white"            android:textSize="@dimen/sp_13" />        <View            android:layout_width="@dimen/dp_1"            android:layout_height="@dimen/dp_15"            android:layout_marginLeft="@dimen/dp_10"            android:layout_marginRight="@dimen/dp_10"            android:background="@color/white" />        <TextView            android:id="@+id/text_forget_gesture"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/forget_gesture_code"            android:textColor="@color/white"            android:textSize="@dimen/sp_13" />    </LinearLayout></RelativeLayout>