<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_detail_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/comm_topbar_style_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:ems="4"
                android:text="@string/user_setting_info_old_password"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:background="@color/trans_color"
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/user_detail_content_blue_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/user_detail_title_line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:ems="4"
                android:text="@string/user_setting_info_new_password"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:background="@color/trans_color"
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/user_detail_content_blue_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/user_detail_title_line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:ems="4"
                android:text="@string/user_setting_info_confirm_password"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:background="@color/trans_color"
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/user_detail_content_blue_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>